--- a/04-CSS-Layouts/css-grid.html
+++ b/04-CSS-Layouts/css-grid.html
@@ -32,6 +32,14 @@
         background-color: crimson;
       }
 
+      .el--8 {
+        grid-column: 2/3;
+        grid-row: 2/3;
+      }
+      .el--2 {
+        grid-column: 1/-1;
+        grid-row: 2/3;
+      }
       .container--1 {
         /* STARTER */
         font-family: sans-serif;
@@ -40,6 +48,16 @@
         margin: 40px;
 
         /* CSS GRID */
+        display: grid;
+        /* grid-template-columns: 300px 200px 150px 100px;
+        grid-template-rows: 200px 150px; */
+        /* grid-template-columns: 3fr 2fr 1.5fr 1fr;
+        grid-template-rows: 2fr 1fr; */
+        grid-template-columns: 3fr 2fr 1.5fr 1fr;
+        grid-template-rows: 200px 100px;
+        /* gap: 30px; */
+        row-gap: 20px;
+        column-gap: 30px;
       }
 
       .container--2 {
